samples/_failures_safe/1761407571_ef43b5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_94fb9b7f.c: In function ‘main’:
./samples/SAFE/__tmp_94fb9b7f.c:136:9: error: expected declaration or statement at end of input
  136 |         CHECK_BOUNDS(header.original_size, MAX_INPUT_SIZE);
      |         ^~~~~~~~~~~~
./samples/SAFE/__tmp_94fb9b7f.c:136:9: error: expected declaration or statement at end of input
